Bug 1504587 - Fix OOM bug in IonBuilder::inlineRegExpSearcher. r=nbp

We cleared the exception but then propagated the "we have a pending exception" AbortReason.
This makes inlineRegExpSearcher behave like inlineRegExpMatcher and inlineRegExpTester.

Differential Revision: https://phabricator.services.mozilla.com/D11736

--HG--
extra : moz-landing-system : lando